test/analysis/accept/start-decl.ptk



start <magic>;

rule magic = "magic";

