test/analysis/reject/duplicate-start.ptk
# expected: E1306

start <magic>;

rule magic = "magic";

rule disco = "disco";

start <disco>;

